--- a/.github/workflows/check-size.yaml
+++ b/.github/workflows/check-size.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   check-size:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     name: Check for large files
 
     steps:
@@ -22,6 +22,3 @@ jobs:
         uses: ./
         with:
           max_file_size_kb: '20'
-          base_sha: '${{ github.event.pull_request.base.sha }}'
-          head_sha: '${{ github.event.pull_request.head.sha }}'
-
