--- a/action.yaml
+++ b/action.yaml
@@ -42,3 +42,8 @@ runs:
   steps:
     - shell: sh
       run: ./file_size_checker.sh
+    - shell: sh
+      run: |
+        echo "max_file_size_kb: ${{ inputs.max_file_size_kb }}"
+        echo "base_sha: ${{ inputs.base_sha }}"
+        echo "head_sha: ${{ inputs.head_sha }}"
