--- a/.github/workflows/check-size.yaml
+++ b/.github/workflows/check-size.yaml
@@ -10,18 +10,15 @@ on:
 
 jobs:
   check-size:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     name: Check for large files
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
 
-      - name: Check for files over 20KB
+      - name: Check for files over 20KiB
         id: file-check
         uses: ./
         with:
-          max_file_size_kb: '20'
-          base_sha: '${{ github.event.pull_request.base.sha }}'
-          head_sha: '${{ github.event.pull_request.head.sha }}'
-
+          max_file_size_kib: '20'
