docs: use release please to update latest version in docs

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -5,7 +5,9 @@
   "tag-separator": "/",
   "release-type": "simple",
   "packages": {
-    ".": {}
+    ".": {
+      "extra-files": ["README.md"]
+    }
     },
   "changelog-sections": [
     {
